--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Sivachandran Raina - Portfolio</title>
+    <meta name="description" content="Most of the people don't read this block in the search results so here I'm leaving just a simple message, click the link & explore about me..." />
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,100italic,400,300italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway:700,400,100,200,300' rel='stylesheet' type='text/css'>
